  - added user-configurable backspace (^H/^?)
    (Jeroen van der Most <jvdmost@wi.leidenuniv.nl>)

  - bugfixed in DnD handling

  - added localisation of messages

  - bugfixes in color handling

  - added option `-linux' to set up a linux-console conformal kvt.
    made underline possible in linux-color-mode.
	
  - bugfixes in color handling

  - added a "Linux Console" color-entry.

  - Now kvt searches a list of TERM-entries and takes the first
    (`best') available.  This should minimize problems with
    unincomplete or antiquated terminfo/termcap databases. (This is
    based on curses.)

since kvt-0.16:
  	
  - added a linux-console compatible color-mode (M G Berberich)

since kvt-0.15:

  - segfault with open menus fixed
  - exit segfault with a floating menubar fixed
	
since kvt-0.14:
	
  - keyboard accelerators for the menus (Cedric Maion)
  - added a minimumSize();
  - fixed the tiny "huge"-bug 
  - Class of characters that form a word can be extenden by the user
    (M G Berberich)
  - Option -vt_geometry now work's again. (M G Berberich)
  - Doubleclick selects wordwise, trippleclick selects linewise
    (M G Berberich)
  - various sizes (M G Berberich) 
  - selection works with all keymasks now
  - drag'n'drop (Christian Esken)
  - small fixes for FreeBSD (Marc van Kempen)
  - new option "-tn" for terminal type
  - background white leads to lightgrey for applications.
    This allows dialog-programms to look nice (e.g. LISA)
  - bugfixes in the event loop. First version that seems to work properly :) 
  - black-on-black fixed: now black-on-white if a 
    color allocation fails
  - multiline selection fixed again
  - scrollbar problems fixed 
  - should compile on Linux/Alpha now (Christian Czezatke)
  - fixed the multiline selection again
  - kdisplays changes gets recognized during runtime now
  - small bugfix for backspace
  - greater bugfix for eventhandling (fix of the deep-bug fix)
  - usage of KApplication::invokeHTMLHelp(...)